@@ -12,7 +12,7 @@ defaultttl   = 3
 genmachines = 'genmachines -v'
 calcif      = 'calcif2'
 difx2fits   = 'difx2fits -v'
-mpiOptions  = '--mca mpi_yield_when_idle 1 --mca rmaps seq'
+mpiOptions  = '--mca mpi_yield_when_idle 1 --mca rmaps seq --mca btl_openib_if_include ib0'
 
 from sys import argv, exit, stdout
 from os import popen, getcwd, system, getenv, getpid, environ
